# hikari-botbase

./: .editorconfig  .gitignore  README.md  __init__.py  __main__.py  prelude.py  pyproject.toml  run  run.bat
common/: __init__.py  bot.py  errors.py  events.py  models.py
mods/#example/: __init__.py
mods/_/: __init__.py  errors.py
mods/_/commands/: __init__.py  botstatus.py  profiles.py
mods/_/config/: __init__.py  models.py  settings.py
mods/_/config/emoji/: __init__.py
mods/_/db/: __init__.py  model_global.py  model_guild.py  model_profile.py  model_user.py  model_version.py
mods/_/events/: __init__.py
mods/_/hooks/: __init__.py  banned.py
mods/_/lang/: __init__.py  machinery.py
mods/_/lang/_lang/: _.py
mods/_/langtools/: __init__.py
mods/_/models/: __init__.py  _base.py
mods/_/tools/: __init__.py  arc_options.py  dump_and_send.py  ephemeral.py  loopback_link.py  timer.py
mods/_/tools/menus/: __init__.py  copycat.py  item_owned.py  multiple_starting_screens.py  owned.py  timeout.py
mods/dev/: __init__.py  config.py
mods/dev/commands/: __init__.py  _base.py  cleardb.py  db.py  dumpdb.py  mods.py  profile.py  run.py
mods/dev/lang/: __init__.py
mods/dev/lang/_lang/: _.py
src/: bot.py  mod_loader.py
